--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "fancy-log": "^1.3.0",
     "glob": "^7.1.2",
     "globby": "^9.1.0",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-axe-webdriver": "^3.1.0",
     "gulp-babel": "^8.0.0",
@@ -199,8 +199,16 @@
       "@commitlint/config-conventional"
     ],
     "rules": {
-      "header-max-length": [2, "always", 50],
-      "body-max-line-length": [2, "always", 72]
+      "header-max-length": [
+        2,
+        "always",
+        50
+      ],
+      "body-max-line-length": [
+        2,
+        "always",
+        72
+      ]
     }
   },
   "husky": {
